2005-09-29  Tom Tromey  <tromey@redhat.com>

	* java/rmi/activation/ActivationGroup_Stub.java (serialVersionUID):
	New field.

2005-09-28  Lillian Angel  <langel@redhat.com>

	Fixes Bug #24080
	* java/awt/Window.java
	(show): Fixed the synchronized block to fix deadlock
	problem.

2005-09-29  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/GdkTextLayout.java
	(getOutline): Implement as native
	* include/gnu_java_awt_peer_gtk_GdkTextLayout.h
	Add declaration
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkTextLayout.c
	(getOutline): Implement.
	
2005-09-29  Roman Kennke  <kennke@aicas.com>

	* java/rmi/server/RMIClassLoader.java
	(loadClass(URL, String)): New method.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	Fixes Bug #24114
	* javax/swing/plaf/basic/BasicTextUI.java
	(installDefaults): Set the background color correctly.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicIconFactory.java
	(getMenuArrowIcon): adjusted the size and painting of the returned
	icon,
	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(paintMenuItem): adjusted arrow icon position.

2005-09-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/AbstractDocument.java:
	(BranchElement.getElementIndex): If there are no children, don't return
	-1, instead getStartOffset() will throw NPE.  Also, if no child Element
	contains the specified offset, return the closest one.

2005-09-28  Lillian Angel  <langel@redhat.com>

	* javax/swing/ToolTipManager.java
	(showTip): Added check to prevent NPE.
	(adjustLocation): Changed else if to if, to
	check final y position of tooltip incase
	it is still cut off.

2005-09-28  Roman Kennke  <kennke@aicas.com>

	* java/rmi/server/RMIClassLoader.java:
	Moved all implementation code to
	gnu.java.rmi.server.RMIClassLoaderImpl.
	(getProviderInstance): New helper method to find a provider.
	(getDefaultProviderInstance): New helper method to find a provider.