@@ -1,3 +1,10 @@
+2005-09-29  Lillian Angel  <langel@redhat.com>
+
+	* javax/swing/plaf/basic/BasicMenuItemUI.java:
+	Added a new field for the gap between the icon and text.
+	(setPreferredMenuItemSize): Changed gap from defaultTextIconGap
+	to defaultTextArrowIconGap
+
 2005-09-29  Tom Tromey  <tromey@redhat.com>
 
 	* java/rmi/activation/ActivationGroup_Stub.java (serialVersionUID):
